--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "@types/react-modal": "^3.10.6",
+    "@types/styled-components": "^5.1.3",
+    "html2canvas": "^1.0.0-rc.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
+    "styled-components": "^5.2.0"
   }
 }
