--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,10 @@
 {
-    "compilerOptions": {
-        "sourceMap": true,
-        "target": "es6",
-        "module": "commonjs",
-        "jsx": "react",
-        "esModuleInterop": true
-    },
-    "exclude": [
-        "node_modules",
-    ]
+  "compilerOptions": {
+    "sourceMap": true,
+    "target": "es2018",
+    "module": "commonjs",
+    "jsx": "react",
+    "esModuleInterop": true
+  },
+  "exclude": ["node_modules"]
 }
