--- a/app/package.json
+++ b/app/package.json
@@ -12,15 +12,19 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^5.0.1",
+    "antd": "^4.6.4",
+    "camelcase-keys": "^6.2.2",
     "dotenv-cli": "^3.1.0",
     "limiter": "^1.1.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "styled-components": "^5.0.1",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "zustand": "^3.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +52,7 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^5.0.15",
+    "@types/react-modal": "^3.10.6",
     "@types/react-toast-notifications": "^2.4.0",
     "@types/yup": "^0.26.34",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
