--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "limiter": "^1.1.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-google-login": "^5.1.21",
     "react-helmet": "^5.2.1",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
