--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,6 +6,7 @@ autopep8==1.5
 black==19.10b0
 boto3==1.12.27
 botocore==1.15.27
+cachetools==4.1.1
 cent==3.0.1
 certifi==2019.11.28
 cffi==1.14.0
@@ -22,7 +23,13 @@ flake8==3.7.9
 Flask==1.1.1
 Flask-Cors==3.0.8
 Flask-WTF==0.14.3
+google-api-core==1.22.2
+google-api-python-client==1.12.1
+google-auth==1.21.2
+google-auth-httplib2==0.0.4
+googleapis-common-protos==1.52.0
 gunicorn==20.0.4
+httplib2==0.18.1
 idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
@@ -34,7 +41,9 @@ mccabe==0.6.1
 minio==5.0.8
 pathspec==0.7.0
 peewee==3.13.3
+protobuf==3.13.0
 pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pycodestyle==2.5.0
 pycparser==2.20
 pyflakes==2.1.1
@@ -53,6 +62,7 @@ six==1.14.0
 stripe==2.43.0
 toml==0.10.0
 typed-ast==1.4.1
+uritemplate==3.0.1
 urllib3==1.25.8
 Werkzeug==1.0.0
 wrapt==1.11.2
