--- a/chrome/.vscode/settings.json
+++ b/chrome/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-  "editor.formatOnSave": true,
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  }
+  "editor.formatOnSave": false
 }
