--- a/chrome/package.json
+++ b/chrome/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "NODE_ENV=development webpack",
     "prod": "NODE_ENV=production webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "@types/chrome": "0.0.123",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "css-loader": "^4.3.0",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
@@ -34,5 +37,8 @@
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
     "styled-components": "^5.2.0"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   }
 }
