--- a/chrome/package.json
+++ b/chrome/package.json
@@ -32,11 +32,9 @@
   },
   "dependencies": {
     "@types/react-modal": "^3.10.6",
-    "@types/styled-components": "^5.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-modal": "^3.11.2",
-    "styled-components": "^5.2.0"
+    "react-modal": "^3.11.2"
   },
   "eslintConfig": {
     "extends": "react-app"
