--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.0",
     "react-google-login": "^5.1.21",
     "react-helmet": "^5.2.1",
+    "react-infinite-scroll-component": "^5.1.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
