--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.6.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
@@ -18,6 +21,7 @@
     "limiter": "^1.1.5",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-feather": "^2.0.8",
     "react-google-login": "^5.1.21",
     "react-helmet": "^5.2.1",
     "react-infinite-scroll-component": "^5.1.0",
