[app] Modify environment settings

--- a/app/.env.development
+++ b/app/.env.development
@@ -1,4 +1,1 @@
-REACT_APP_AUTH0_DOMAIN=domclipper-dev.us.auth0.com
-REACT_APP_AUTH0_CLIENT_ID=1LXo1mbvgVNXUeiiDgaEYpZUw0zdMOpu
-REACT_APP_AUTH0_AUDIENCE=https://domclipper-dev.us.auth0.com/api/v2/
-REACT_APP_OIDC_NAMESPACE=https://domclipper-dev.studio-rubik.dev
+REACT_APP_BACKEND_URL=http://127.0.0.1:5000
