--- a/app/.env.production
+++ b/app/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_BACKEND_URL=https://api.qlip.page
 REACT_APP_GOOGLE_CLIENT_ID=90927612981-aspalr02c3d52ndgtvj1oska2bo4qml9.apps.googleusercontent.com
+REACT_APP_GOOGLE_ANALYTICS_ID=UA-128111595-7
