--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-feather": "^2.0.8",
+    "react-ga": "^3.1.2",
     "react-google-login": "^5.1.21",
     "react-helmet": "^5.2.1",
     "react-infinite-scroll-component": "^5.1.0",
