[app] Fix html title and npm name

--- a/app/public/manifest.json
+++ b/app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Membo",
-  "name": "Create React App Sample",
+  "short_name": "Qlip",
+  "name": "Qlip",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
