--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,6 @@
     "react-dom": "^16.13.0",
     "react-feather": "^2.0.8",
     "react-ga": "^3.1.2",
-    "react-google-login": "^5.1.21",
     "react-helmet": "^5.2.1",
     "react-infinite-scroll-component": "^5.1.0",
     "react-modal": "^3.11.2",
@@ -58,6 +57,8 @@
     ]
   },
   "devDependencies": {
+    "@types/gapi": "^0.0.39",
+    "@types/gapi.auth2": "^0.0.52",
     "@types/react-helmet": "^5.0.15",
     "@types/react-modal": "^3.10.6",
     "@types/react-toast-notifications": "^2.4.0",
